# heavenly-health-protocol

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
agent-images/claude/: Dockerfile
agent-images/codex/: Dockerfile
docs/: agent-runtime-architecture.md  agent-sandbox.md  architecture.md  cloudflare-access-automation.md  deployment.md  mcp-tool-policy.md  onboarding.md  security.md
docs/adr/: 0001-application-runtime-and-model-isolation.md
docs/providers/: README.md  apple-health-auto-export.md  garmin.md  google-health.md  oura.md  whoop.md
docs/testing/: agent-sandbox.tdd.md  cloudflare-access-allowlist.tdd.md  garmin-connector.tdd.md  mcp-oauth.tdd.md  (+5 more)
sql/: 001_heavenly_health_events.sql  002_raw_and_event_provenance.sql  003_least_privilege.sql
tests/: test_agent_images.py  test_agent_sandbox.py  test_approvals.py  test_briefing.py  test_briefing_cli.py  test_cli.py  test_cloudflare_access.py  test_cloudflare_managed_oauth.py  test_config.py  test_daily_briefing.py  test_daily_feedback.py  test_daily_state.py  test_garmin.py  test_google_health.py  test_health_storage.py  test_identity.py  test_launchd_runtime.py  test_mcp_server.py  test_oauth_loopback.py  test_oauth_runtime.py  test_onboarding.py  test_packaging.py  test_provider_cli.py  test_provider_common.py  test_provider_integration.py  test_provider_runtime.py  test_public_release.py  test_runtime.py  test_secret_loader.py  test_whoop_oura_providers.py
(+31 files in other folders)
