[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "heavenly-health-protocol"
version = "0.2.0"
description = "LLM-agnostic, privacy-first health data protocol and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Heavenly Health Protocol contributors" }]
keywords = ["health", "mcp", "cli", "privacy", "llm"]
dependencies = [
  "cryptography>=48.0.1,<49",
  "fastmcp>=3.4,<4",
  "httpx>=0.27,<1",
  "keyring>=25.7,<26",
  "mcp>=1.0,<2",
  "PyJWT[crypto]>=2.10,<3",
  "py-key-value-aio[filetree]>=0.4.5,<1",
  "rich>=13.9,<14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.10.0,<2.11",
  "pyright>=1.1.411,<1.2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.15.20,<0.16",
]

[project.scripts]
heavenly = "heavenly_health.cli:app"
heavenly-mcp = "heavenly_health.launcher:run"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build]
exclude = [
  "/handover.md",
  "/.env",
  "**/runtime.env",
]

[tool.hatch.build.targets.wheel]
packages = ["src/heavenly_health"]
